LC VC - 11th June 2024 - Weekly Contest 2

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -1359,6 +1359,7 @@
      "iopub.status.idle": "2024-06-10T02:33:05.362476Z",
      "shell.execute_reply": "2024-06-10T02:33:05.362056Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012261,
      "end_time": "2024-06-10T02:33:05.363530",
@@ -1422,6 +1423,180 @@
     "assert lengthLongestPath(\"file1.txt\\nfile2.txt\\nlongfile.txt\") == 12\n",
     "assert lengthLongestPath(\"dir1\\ndir2\\n\\tsubdir1\\n\\tsubdir2\\n\\t\\tfile.ext\") == 21\n",
     "assert lengthLongestPath(\"dir0\\n\\tabcdefghijklmnopqrstuvw.file\") == 33"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6646c06b",
+   "metadata": {},
+   "source": [
+    "LC Medium: Furthest Building you can reach\n",
+    "https://leetcode.com/problems/furthest-building-you-can-reach/submissions/1284332700/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cb0678f",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def furthestBuilding(heights: list[int], bricks: int, ladders: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Maintain the sum of deltas, maintain a max heap of size ladders.\n",
+    "    At any point total sum - heap sum > bricks, break\n",
+    "    \"\"\"\n",
+    "    class MinHeap:\n",
+    "        def __init__(self, size: int):\n",
+    "            self.capacity: int = size\n",
+    "            self.heap: list[int] = []\n",
+    "            self.sum: int = 0\n",
+    "            self.N = 0\n",
+    "\n",
+    "        def add(self, delta: int) -> int:\n",
+    "            \"\"\"\n",
+    "            Adds to the heap and returns the sum of the heap\n",
+    "            \"\"\"\n",
+    "            if self.N < self.capacity:\n",
+    "                heapq.heappush(self.heap, delta)\n",
+    "                self.sum, self.N = self.sum + delta, self.N + 1\n",
+    "            else:\n",
+    "                # Equivalent to a push, then a pop\n",
+    "                extra = heapq.heappushpop(self.heap, delta)\n",
+    "                self.sum += delta - extra\n",
+    "\n",
+    "            return self.sum\n",
+    "\n",
+    "        def __str__(self) -> str:\n",
+    "            return ','.join(sorted(map(str, self.heap)))\n",
+    "\n",
+    "    N = len(heights)\n",
+    "    heap = MinHeap(ladders)\n",
+    "    heap.add(0)\n",
+    "    total_sum, prev = 0, heights[0]\n",
+    "    for i in range(N):\n",
+    "        prev, delta = heights[i], heights[i] - prev\n",
+    "        if delta >= 0:\n",
+    "            total_sum += delta\n",
+    "            heap_sum = heap.add(delta)\n",
+    "            if total_sum - heap_sum > bricks:\n",
+    "                return i - 1\n",
+    "\n",
+    "    return i\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert furthestBuilding([4,2,7,6,9,14,12], 5, 1) == 4\n",
+    "assert furthestBuilding([4,12,2,7,3,18,20,3,19], 10, 2) == 7\n",
+    "assert furthestBuilding([14,3,19,3], 17, 0) == 3\n",
+    "assert furthestBuilding([1,5,1,2,3,4,10000], 4, 1) == 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eb1b723",
+   "metadata": {},
+   "source": [
+    "LC Virtual - 3: Weekly Contest 2\n",
+    "https://leetcode.com/contest/leetcode-weekly-contest-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "415f85c7",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# LC Easy: Q1: Find the difference\n",
+    "def findTheDifference(s: str, t: str) -> str:\n",
+    "    s_freq = collections.Counter(s)\n",
+    "    for ch in t:\n",
+    "        if ch not in s_freq:\n",
+    "            return ch\n",
+    "        else:\n",
+    "            s_freq[ch] -= 1\n",
+    "            if s_freq[ch] == 0:\n",
+    "                s_freq.pop(ch)\n",
+    "\n",
+    "    return \"\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTheDifference(\"ab\", \"aba\") == 'a'\n",
+    "assert findTheDifference(\"\", \"x\") == 'x'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a4f0ace",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# LC Medium: Q2: Elimination Game\n",
+    "def lastRemainingBrute(N: int) -> int:\n",
+    "    not_eliminated: set[int] = set(range(1, N + 1))\n",
+    "    skip, dir_ = 1, 1\n",
+    "    while len(not_eliminated) >  1:\n",
+    "        # RTL\n",
+    "        if dir_ == 1:\n",
+    "            start = min(not_eliminated)\n",
+    "            end, skip, dir_ = N + 1, 2 * abs(skip), -1\n",
+    "\n",
+    "        # LTR\n",
+    "        else:\n",
+    "            start = max(not_eliminated)\n",
+    "            end, skip, dir_ = 0, -2 * abs(skip), 1\n",
+    "\n",
+    "        print(not_eliminated)\n",
+    "\n",
+    "        for i in range(start, end, skip):\n",
+    "            not_eliminated.remove(i)\n",
+    "\n",
+    "    return not_eliminated.pop()\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert lastRemainingBrute(9) == 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4eab57a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lastRemaining(N: int) -> int:\n",
+    "    \"\"\"\n",
+    "    Binary Search like approach:\n",
+    "        If N is odd: Shrink both ends\n",
+    "        Elif dir == \"right\": Shrink to right\n",
+    "        Else: Shrink to left\n",
+    "    \"\"\"\n",
+    "    start, end = 1, N\n",
+    "    range_length, shrink_size = N, 1\n",
+    "    rtl = True\n",
+    "    while range_length > 1:\n",
+    "        if range_length % 2:\n",
+    "            start, end = start + shrink_size, end - shrink_size\n",
+    "        elif rtl:\n",
+    "            start = start + shrink_size\n",
+    "        else:\n",
+    "            end = end - shrink_size\n",
+    "\n",
+    "        rtl = not rtl\n",
+    "        range_length, shrink_size = range_length // 2, shrink_size * 2\n",
+    "\n",
+    "    return start\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert lastRemaining(9) == 6\n",
+    "assert lastRemaining(1) == 1"
    ]
   }
  ],
