--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -1645,6 +1645,7 @@
      "iopub.status.idle": "2024-06-11T03:23:53.091660Z",
      "shell.execute_reply": "2024-06-11T03:23:53.091260Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010874,
      "end_time": "2024-06-11T03:23:53.092709",
@@ -1682,6 +1683,446 @@
     "# Testing the solution\n",
     "assert lastRemaining(9) == 6\n",
     "assert lastRemaining(1) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d248101f",
+   "metadata": {},
+   "source": [
+    "LC Easy: Rectangle Overlap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f21603e9",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isRectangleOverlap(rec1: list[int], rec2: list[int]) -> bool:\n",
+    "    # Store to variables for clarity\n",
+    "    (r1_x1, r1_y1, r1_x2, r1_y2) = rec1\n",
+    "    (r2_x1, r2_y1, r2_x2, r2_y2) = rec2\n",
+    "\n",
+    "    # If one rectangle is on the left side of the other\n",
+    "    if r1_x2 < r2_x1 or r2_x2 < r1_x1:\n",
+    "        return False\n",
+    "\n",
+    "    # If one rectangle is above the other\n",
+    "    elif r1_y2 < r2_y1 or r2_y2 < r1_y1:\n",
+    "        return False\n",
+    "\n",
+    "    # They must overlap\n",
+    "    else:\n",
+    "        return True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f527bbd",
+   "metadata": {},
+   "source": [
+    "LC Hard: Perfect Rectangle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "091b1311",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isRectangleCoverBrute(rectangles: list[list[int]]) -> bool:\n",
+    "    \"\"\"\n",
+    "    Time: O(N ** 2), Space: O(1)\n",
+    "    \"\"\"\n",
+    "    def isOverlap(r1: list[int], r2: list[int]) -> bool:\n",
+    "        \"\"\"\n",
+    "        Time: O(1)\n",
+    "        \"\"\"\n",
+    "        r1_x1, r1_y1, r1_x2, r1_y2 = r1\n",
+    "        r2_x1, r2_y1, r2_x2, r2_y2 = r2\n",
+    "\n",
+    "        if r1_x2 <= r2_x1 or r2_x2 <= r1_x1:\n",
+    "            return False\n",
+    "        elif r1_y2 <= r2_y1 or r2_y2 <= r1_y1:\n",
+    "            return False\n",
+    "        else:\n",
+    "            return True\n",
+    "\n",
+    "    # Number of rectangles\n",
+    "    N = len(rectangles)\n",
+    "\n",
+    "    # Check for overlap\n",
+    "    for i in range(N):\n",
+    "        for j in range(i + 1, N):\n",
+    "            if isOverlap(rectangles[i], rectangles[j]):\n",
+    "                return False\n",
+    "\n",
+    "    # Check if area matches\n",
+    "    min_x, min_y, max_x, max_y = math.inf, math.inf, -math.inf, -math.inf\n",
+    "    total_area = 0\n",
+    "    for i in range(N):\n",
+    "        (x1, y1, x2, y2) = rectangles[i]\n",
+    "        min_x = min(min_x, x1, x2)\n",
+    "        min_y = min(min_y, y1, y2)\n",
+    "        max_x = max(max_x, x1, x2)\n",
+    "        max_y = max(max_y, y1, y2)\n",
+    "        total_area += abs(x1 - x2) * abs(y1 - y2)\n",
+    "\n",
+    "    return total_area == (max_x - min_x) * (max_y - min_y)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isRectangleCoverBrute([[1,1,3,3],[3,1,4,2],[1,3,2,4],[2,2,4,4]]) == False\n",
+    "assert isRectangleCoverBrute([[1,1,2,3],[1,3,2,4],[3,1,4,2],[3,2,4,4]]) == False\n",
+    "assert isRectangleCoverBrute([[1,1,3,3],[3,1,4,2],[3,2,4,4],[1,3,2,4],[2,3,3,4]]) == True\n",
+    "assert isRectangleCoverBrute([[0,0,1,1],[0,1,3,2],[1,0,2,2]]) == False\n",
+    "assert isRectangleCoverBrute([[0,0,2,2],[1,1,3,3],[2,0,3,1],[0,3,3,4]]) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "786df862",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Logic copied from `https://leetcode.com/problems/perfect-rectangle/solutions/2992766/easy-c-solution-o-n-using-map/`\n",
+    "# https://leetcode.com/problems/perfect-rectangle/submissions/1284785419/\n",
+    "def isRectangleCover(rectangles: list[list[int]]) -> bool:\n",
+    "    \"\"\"\n",
+    "    - Each internal corner (where rectangles meet but do not form an external corner of the overall rectangle) will be counted an even number of times and should cancel out to zero.\n",
+    "    - Each external corner of the overall covering rectangle should appear exactly once.\n",
+    "    - Coordinate counts must either cancel out or equal 0\n",
+    "\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    coord_freq: dict[tuple[int, int], int] = dict()\n",
+    "    for rect in rectangles:\n",
+    "        # Tuple unpacking\n",
+    "        x1, y1, x2, y2 = rect\n",
+    "\n",
+    "        # Top left, Top Right, Bottom Left, Bottom Right\n",
+    "        tl, tr, bl, br = (x1, y2), (x2, y2), (x1, y1), (x2, y1)\n",
+    "\n",
+    "        # Add bottom left, top right\n",
+    "        coord_freq[bl] = coord_freq.get(bl, 0) + 1\n",
+    "        coord_freq[tr] = coord_freq.get(tr, 0) + 1\n",
+    "\n",
+    "        # Subtract top left, bottom right\n",
+    "        coord_freq[tl] = coord_freq.get(tl, 0) - 1\n",
+    "        coord_freq[br] = coord_freq.get(br, 0) - 1\n",
+    "\n",
+    "    # Ensure that we have exactly 4 corners with count == 1\n",
+    "    corner_count = 0\n",
+    "    for freq in coord_freq.values():\n",
+    "        if abs(freq) == 1:\n",
+    "            corner_count += 1\n",
+    "        elif freq != 0:\n",
+    "            return False\n",
+    "\n",
+    "    return corner_count == 4\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isRectangleCover([[1,1,3,3],[3,1,4,2],[1,3,2,4],[2,2,4,4]]) == False\n",
+    "assert isRectangleCover([[1,1,2,3],[1,3,2,4],[3,1,4,2],[3,2,4,4]]) == False\n",
+    "assert isRectangleCover([[1,1,3,3],[3,1,4,2],[3,2,4,4],[1,3,2,4],[2,3,3,4]]) == True\n",
+    "assert isRectangleCover([[0,0,1,1],[0,1,3,2],[1,0,2,2]]) == False\n",
+    "assert isRectangleCover([[0,0,2,2],[1,1,3,3],[2,0,3,1],[0,3,3,4]]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "907744f5",
+   "metadata": {},
+   "source": [
+    "LC Easy: Relative sort array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0305397d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def relativeSortArray(arr1: list[int], arr2: list[int]) -> list[int]:\n",
+    "    # Time: O(N2 + N1 log N1), Space: O(N2)\n",
+    "    N1, N2 = len(arr1), len(arr2)\n",
+    "    keys: dict[int, int] = {k: i for i, k in enumerate(arr2)}\n",
+    "    arr1.sort(key=lambda x: keys.get(x, x + N1))\n",
+    "    return arr1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert relativeSortArray([2,3,1,3,2,4,6,7,9,2,19], [2,1,4,3,9,6]) == [2,2,2,1,4,3,3,9,6,7,19]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01db997d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def relativeSortArrayBetter(arr1: list[int], arr2: list[int]) -> list[int]:\n",
+    "    \"\"\"\n",
+    "    1. Count occurances of arr1\n",
+    "    2. Iterate throught arr2 (for preserving order), while freq[n] exists keep appending and decreasing the freq\n",
+    "    3. Sort the left overs and append to the result\n",
+    "    \"\"\"\n",
+    "    freq: collections.Counter = collections.Counter(arr1)\n",
+    "    result: list[int] = []\n",
+    "    for n in arr2:\n",
+    "        while freq[n]:\n",
+    "            result.append(n)\n",
+    "            freq[n] -= 1\n",
+    "            if freq[n] == 0:\n",
+    "                freq.pop(n)\n",
+    "\n",
+    "    for n in sorted(freq.keys()):\n",
+    "        while freq[n]:\n",
+    "            result.append(n)\n",
+    "            freq[n] -= 1\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert relativeSortArrayBetter([2,3,1,3,2,4,6,7,9,2,19], [2,1,4,3,9,6]) == [2,2,2,1,4,3,3,9,6,7,19]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "832b965b",
+   "metadata": {},
+   "source": [
+    "LC Easy: Find Pivot Integer\n",
+    "Runtime comparison\n",
+    "1. C Lang: 0 ms\n",
+    "```C\n",
+    "// To compile run: gcc test.c -o test.out -ln && ./test.out\n",
+    "\n",
+    "#include <stdio.h>\n",
+    "#include <math.h>\n",
+    "\n",
+    "int pivotInteger(int n) {\n",
+    "    int total = (n * (n + 1)) / 2;    \n",
+    "    int result = sqrt(total);\n",
+    "    return result * result == total? result: -1;\n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "    int n;\n",
+    "    scanf(\"%d\", &n);\n",
+    "    printf(\"%d\\n\", pivotInteger(n));\n",
+    "    return 0;\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "2. CPP: 0 ms\n",
+    "```\n",
+    "// To compile run: g++ test.cpp -o test.out && ./test.out\n",
+    "\n",
+    "#include <cmath>\n",
+    "#include <iostream>\n",
+    "\n",
+    "int pivotInteger(int n) {\n",
+    "    int total = (n * (n + 1)) / 2;\n",
+    "    int result = sqrt(total);\n",
+    "    return result * result == total? result: -1;\n",
+    "}\n",
+    "\n",
+    "int main() {\n",
+    "    int n;\n",
+    "    std::cin >> n;\n",
+    "    printf(\"%d\\n\", pivotInteger(n));\n",
+    "    return 0;\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16793973",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Runtime: 32 ms\n",
+    "def pivotInteger(n: int) -> int:\n",
+    "    total = (n * (n + 1)) // 2\n",
+    "    result = int(math.sqrt(total))\n",
+    "    return result if result * result == total else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert pivotInteger(8) == 6\n",
+    "assert pivotInteger(3) == -1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d251ff7e",
+   "metadata": {},
+   "source": [
+    "LC Virtual - 2: Weekly Contest 3\n",
+    "https://leetcode.com/contest/leetcode-weekly-contest-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1bf1e1e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1: Is Subsequence: https://leetcode.com/problems/is-subsequence/\n",
+    "def isSubsequence(s: str, t: str) -> bool:\n",
+    "    \"\"\"\n",
+    "    If there are a lot of s in sequence to parse, we could try this approach:\n",
+    "        1. Store the indices of each character of t to a hashmap\n",
+    "        2. Have a pointer on both s and t\n",
+    "        3. For each char s[i], check hm[s[i]] for the indices. j is set to smallest index > j. If no such j is available return False right away.\n",
+    "        4. If all elements are done, it is a match.\n",
+    "    \"\"\"\n",
+    "    N1, N2 = len(s), len(t)\n",
+    "    i = j = 0\n",
+    "    while i < N1 and j < N2:\n",
+    "        if s[i] == t[j]:\n",
+    "            i, j = i + 1, j + 1\n",
+    "        else:\n",
+    "            j += 1\n",
+    "    return i == N1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isSubsequence(\"abc\", \"ahbgdc\") == True\n",
+    "assert isSubsequence(\"axc\", \"ahbgdc\") == False\n",
+    "assert isSubsequence(\"\", \"ahbgdc\") == True\n",
+    "assert isSubsequence(\"a\", \"\") == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36f19a81",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q4: Longest Substring with atleast K repeating characters\n",
+    "def longestSubstringBrute(s: str, k: int) -> int:\n",
+    "    N = len(s)\n",
+    "    max_length = 0\n",
+    "    for i in range(N):\n",
+    "        freq: dict[str, int] = dict()\n",
+    "        for j in range(i, N):\n",
+    "            freq[s[j]] = freq.get(s[j], 0) + 1\n",
+    "            if not len(list(filter(lambda x: x < k, freq.values()))):\n",
+    "                max_length = max(max_length, j - i + 1)\n",
+    "\n",
+    "    return max_length\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert longestSubstringBrute(\"aaabb\", 3) == 3\n",
+    "assert longestSubstringBrute(\"ababbc\", 2) == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e36c423b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q3: Decode String\n",
+    "def decodeString(s: str) -> str:\n",
+    "    N = len(s)\n",
+    "    stack: list[str] = []\n",
+    "    for ch in s:\n",
+    "        if ch != \"]\":\n",
+    "            stack.append(ch)\n",
+    "        else:\n",
+    "            acc: list[str] = []\n",
+    "            while stack[-1] != '[':\n",
+    "                acc.append(stack.pop())\n",
+    "\n",
+    "            # Pop out '['\n",
+    "            stack.pop()\n",
+    "\n",
+    "            # Reverse accumulated content\n",
+    "            acc.reverse()\n",
+    "\n",
+    "            # Multiply and append as new item\n",
+    "            multiplier: list[str] = []\n",
+    "            while stack and stack[-1].isnumeric():\n",
+    "                multiplier.append(stack.pop())\n",
+    "            multiplier.reverse()\n",
+    "\n",
+    "            stack.append(int(''.join(multiplier)) * ''.join(acc))\n",
+    "\n",
+    "    return ''.join(stack)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert decodeString(\"3[a2[c]]\") == \"accaccacc\"\n",
+    "assert decodeString(\"3[a]2[bc]\") == \"aaabcbc\"\n",
+    "assert decodeString(\"2[abc]3[cd]ef\") == \"abcabccdcdcdef\"\n",
+    "assert decodeString(\"11[a]\") == \"aaaaaaaaaaa\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19f08338",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q2: Utf-8 Validation\n",
+    "def validUtf8(data: list[int]) -> bool:\n",
+    "    def num2Bin(n: int) -> str:\n",
+    "        return bin(n)[2:].rjust(8, '0')\n",
+    "\n",
+    "    i, N = 0, len(data)\n",
+    "    while i < N:\n",
+    "        curr: str = num2Bin(data[i])\n",
+    "        idx = curr.find('0')\n",
+    "        if idx == 0:\n",
+    "            i += 1\n",
+    "        elif idx in (2, 3, 4):\n",
+    "            # Validate idx - 1 upcoming bytes\n",
+    "            if idx - 1 >= N - i:\n",
+    "                return False\n",
+    "            while idx - 1 > 0:\n",
+    "                i, idx = i + 1, idx - 1\n",
+    "                if not num2Bin(data[i]).startswith('10'):\n",
+    "                    return False\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert validUtf8([197, 130, 1]) == True\n",
+    "assert validUtf8([235, 140, 4]) == False\n",
+    "assert validUtf8([62]) == True\n",
+    "assert validUtf8([237,128,128]) == True\n",
+    "assert validUtf8([237,128]) == False"
    ]
   }
  ],
