LC VC - 12th June 2024 - Weekly Contest 4

--- a/practice/003.ipynb
+++ b/practice/003.ipynb
@@ -2267,6 +2267,7 @@
      "iopub.status.idle": "2024-06-11T17:15:41.633542Z",
      "shell.execute_reply": "2024-06-11T17:15:41.633012Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.01351,
      "end_time": "2024-06-11T17:15:41.634613",
@@ -2309,6 +2310,226 @@
     "assert validUtf8([62]) == True\n",
     "assert validUtf8([237,128,128]) == True\n",
     "assert validUtf8([237,128]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75ba531a",
+   "metadata": {},
+   "source": [
+    "LC Medium: Sort colors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e195afc",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def sortColors(nums_: list[int]) -> list[int]:\n",
+    "    nums = list(nums_)\n",
+    "    N = len(nums)\n",
+    "    i, j, k = 0, 0, N - 1\n",
+    "    while j <= k:\n",
+    "        if nums[j] == 0:\n",
+    "            nums[i], nums[j] = nums[j], nums[i]\n",
+    "            i, j = i + 1, j + 1\n",
+    "        elif nums[j] == 2:\n",
+    "            nums[k], nums[j] = nums[j], nums[k]\n",
+    "            k -= 1\n",
+    "        else:\n",
+    "            j += 1\n",
+    "\n",
+    "    return nums\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sortColors([2,0,2,1,1,0]) == [0,0,1,1,2,2]\n",
+    "assert sortColors([2,0,1]) == [0,1,2]\n",
+    "assert sortColors([1,0]) == [0,1]\n",
+    "assert sortColors([1,2,0]) == [0,1,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d887e4eb",
+   "metadata": {},
+   "source": [
+    "LC Virtual - 3: Weekly Contest 4\n",
+    "https://leetcode.com/contest/leetcode-weekly-contest-4/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8109118",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1: Rotate Function\n",
+    "def maxRotateFunctionBrute(nums: list[int]) -> float:\n",
+    "    N = len(nums)\n",
+    "    F = -math.inf\n",
+    "    for rotate_idx in range(N):\n",
+    "        multiplier, sum_ = rotate_idx, 0\n",
+    "        for n in nums:\n",
+    "            sum_ += multiplier * n\n",
+    "            multiplier = multiplier + 1 if multiplier < N - 1 else 0\n",
+    "        F = max(F, sum_)\n",
+    "\n",
+    "    return F\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxRotateFunctionBrute([4,3,2,6]) == 26\n",
+    "assert maxRotateFunctionBrute([100]) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2893e983",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q4: calcEquation\n",
+    "def calcEquation(equations: list[list[str]], values: list[float], queries: list[list[str]]) -> list[float]:\n",
+    "    \"\"\"\n",
+    "    Imagine the equation points as x, y in a graph.\n",
+    "    In order to find solution to query[i], path must exist.\n",
+    "    A -> D: A -> B / B -> C / C -> D\n",
+    "\n",
+    "    Construct a weighted graph, do a DFS\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def DFS(a: str, b: str, visited: set[str]) -> float:\n",
+    "        if a not in graph or b not in graph:\n",
+    "            return -1\n",
+    "        elif a == b:\n",
+    "            return 1\n",
+    "        else:\n",
+    "            visited.add(a)\n",
+    "            for next_, weight in graph[a]:\n",
+    "                if next_ not in visited:\n",
+    "                    result = DFS(next_, b, visited)\n",
+    "                    if result != -1:\n",
+    "                        return weight * result\n",
+    "            visited.remove(a)\n",
+    "            return -1\n",
+    "\n",
+    "    N = len(equations)\n",
+    "\n",
+    "    # Construct the graph\n",
+    "    graph: dict[str, list[tuple[str, float]]] = dict()\n",
+    "    for i in range(N):\n",
+    "        (n1, n2), weight = equations[i], values[i]\n",
+    "        n1_neighbours, n2_neighbours = graph.get(n1, []), graph.get(n2, [])\n",
+    "        n1_neighbours.append((n2, weight))\n",
+    "        n2_neighbours.append((n1, 1 / weight))\n",
+    "        graph[n1], graph[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    # For each query, do a DFS and return result\n",
+    "    result: list[float] = []\n",
+    "    for n1, n2 in queries:\n",
+    "        result.append(DFS(n1, n2, set()))\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert calcEquation([[\"a\",\"b\"],[\"b\",\"c\"]], [2., 3.], [[\"a\",\"c\"],[\"b\",\"a\"],[\"a\",\"e\"],[\"a\",\"a\"],[\"x\",\"x\"]]) == [6.,0.5,-1.,1.,-1.]\n",
+    "assert calcEquation([[\"a\",\"b\"],[\"b\",\"c\"],[\"bc\",\"cd\"]], [1.5, 2.5, 5.], [[\"a\",\"c\"],[\"c\",\"b\"],[\"bc\",\"cd\"],[\"cd\",\"bc\"]]) == [3.75,0.4,5.,0.2]\n",
+    "assert calcEquation([[\"a\",\"b\"]], [0.5], [[\"a\",\"b\"],[\"b\",\"a\"],[\"a\",\"c\"],[\"x\",\"y\"]]) == [0.5,2.,-1.,-1.]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0ceecf1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2: Integer Replacement\n",
+    "def integerReplacement(N: int) -> int:\n",
+    "    @functools.cache\n",
+    "    def backtrack(n: int) -> float:\n",
+    "        if n < 1:\n",
+    "            return math.inf\n",
+    "        elif n == 1:\n",
+    "            return 0\n",
+    "        elif n % 2 == 0:\n",
+    "            return 1 + backtrack(n // 2)\n",
+    "        else:\n",
+    "            return 1 + min(backtrack(n - 1), backtrack(n + 1))\n",
+    "\n",
+    "    return int(backtrack(N))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert integerReplacement(8) == 3\n",
+    "assert integerReplacement(7) == 4\n",
+    "assert integerReplacement(4) == 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b94e9c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3: Random Pick Index\n",
+    "class random_pick_index:\n",
+    "    def __init__(self, nums: list[int]):\n",
+    "        self.indices: dict[int, list[int]] = dict()\n",
+    "        for i in range(len(nums)):\n",
+    "            n = nums[i]\n",
+    "            index_list = self.indices.get(n, [])\n",
+    "            index_list.append(i)\n",
+    "            self.indices[n] = index_list\n",
+    "\n",
+    "    def pick(self, target: int) -> int:\n",
+    "        indices = self.indices.get(target, [])\n",
+    "        return random.choice(indices) if indices else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = [random.randint(-100, 100) for _ in range(100)]\n",
+    "rpi = random_pick_index(temp)\n",
+    "for i in set(temp):\n",
+    "    j = rpi.pick(i)\n",
+    "    assert temp[j] == i\n",
+    "\n",
+    "# Q1: Rotate Function (Upsolving)\n",
+    "# https://leetcode.com/problems/rotate-function/solutions/195613/6-lines-python-o-n-time-o-1-space-with-explanation/\n",
+    "# https://leetcode.com/problems/rotate-function/submissions/1286223063\n",
+    "def maxRotateFunction(nums: list[int]) -> float:\n",
+    "    \"\"\"\n",
+    "    f(i)          = 0 * A[0] + 1 * A[1] + 2 * A[2] + .... +  (k-1) * A[k-1] + k * A[k]\n",
+    "    f(i+1)        = 1 * A[0] + 2 * A[1] + 3 * A[2] + ...  +     k  * A[k-1] + 0 * A[k]\n",
+    "    f(i+1) - f(i) =     A[0]   +   A[1]   +   A[2] + ...  +       A[k-1]    - k * A[k]\n",
+    "    f(i+1) - f(i) =    (A[0]   +   A[1]   +   A[2] + ...  +       A[k-1] +  A[k]) - (k+1) * A[k]\n",
+    "\n",
+    "    f(i + 1) = f(i) + sum(array) - (last_element * array.length)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    N, sum_ = len(nums), sum(nums)\n",
+    "    F_curr = sum(i * n for i, n in enumerate(nums))\n",
+    "\n",
+    "    F_max = -math.inf\n",
+    "    for i in range(N - 1, -1, -1):\n",
+    "        F_curr = F_curr + sum_ - (nums[i] * N)\n",
+    "        F_max = max(F_max, F_curr)\n",
+    "\n",
+    "    return F_max\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxRotateFunction([4,3,2,6]) == 26\n",
+    "assert maxRotateFunction([100]) == 0"
    ]
   }
  ],
