--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -561,6 +561,7 @@
      "iopub.status.idle": "2024-06-13T03:44:20.957035Z",
      "shell.execute_reply": "2024-06-13T03:44:20.956604Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.009131,
      "end_time": "2024-06-13T03:44:20.958060",
@@ -602,9 +603,50 @@
     "# Testing the solution\n",
     "assert sorted(readBinaryWatch(1)) == sorted([\"0:01\",\"0:02\",\"0:04\",\"0:08\",\"0:16\",\"0:32\",\"1:00\",\"2:00\",\"4:00\",\"8:00\"])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35e89076",
+   "metadata": {},
+   "source": [
+    "Minimum no of moves to seat everyone \n",
+    "https://leetcode.com/problems/minimum-number-of-moves-to-seat-everyone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cec1bdc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def minMovesToSeat(seats: list[int], students: list[int]) -> int:\n",
+    "    # Compute length\n",
+    "    N = len(seats)\n",
+    "\n",
+    "    # Sort both to ensure that we get the minimal distances\n",
+    "    seats.sort()\n",
+    "    students.sort()\n",
+    "\n",
+    "    # Compute abs distance between seats and students\n",
+    "    moves = 0\n",
+    "    for i in range(N):\n",
+    "        moves += abs(seats[i] - students[i])\n",
+    "    return moves\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minMovesToSeat([3,1,5], [2,7,4]) == 4\n",
+    "assert minMovesToSeat([2,2,6,6], [1,3,2,6]) == 4"
+   ]
   }
  ],
  "metadata": {
+  "jupytext": {
+   "extension": ".py",
+   "format_name": "percent",
+   "format_version": "1.3",
+   "jupytext_version": "1.15.2"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
