LC VC - 14th June 2024

--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -617,7 +617,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1cec1bdc",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "def minMovesToSeat(seats: list[int], students: list[int]) -> int:\n",
@@ -637,6 +639,233 @@
     "# Testing the solution\n",
     "assert minMovesToSeat([3,1,5], [2,7,4]) == 4\n",
     "assert minMovesToSeat([2,2,6,6], [1,3,2,6]) == 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c387dd2",
+   "metadata": {},
+   "source": [
+    "LC Medium: Minimum increment to make array unique\n",
+    "https://leetcode.com/problems/minimum-increment-to-make-array-unique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f1753a0",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def minIncrementForUnique(nums: list[int]) -> int:\n",
+    "    # Count freq & unique values present\n",
+    "    counts: dict[int, int] = dict()\n",
+    "    unique: set[int] = set()\n",
+    "    for n in nums:\n",
+    "        counts[n] = counts.get(n, 0) + 1\n",
+    "        unique.add(n)\n",
+    "\n",
+    "    # If count of any number is greater than 1, shift right\n",
+    "    moves = 0\n",
+    "    while unique:\n",
+    "        key = unique.pop()\n",
+    "        count = counts.pop(key)\n",
+    "        if count > 1:\n",
+    "            shift = count - 1\n",
+    "            moves += shift\n",
+    "            counts[key + 1] = counts.get(key + 1, 0) + shift\n",
+    "            unique.add(key + 1)\n",
+    "\n",
+    "    return moves\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minIncrementForUnique([1,2,2]) == 1\n",
+    "assert minIncrementForUnique([3,2,1,2,1,7]) == 6\n",
+    "assert minIncrementForUnique([1,2,2,5,5]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e9474a6",
+   "metadata": {},
+   "source": [
+    "Maximum Gap\n",
+    "https://leetcode.com/problems/maximum-gap/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9795b8e",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/maximum-gap/submissions/1288173457/\n",
+    "def maximumGap(nums: list[int]) -> int:\n",
+    "    \"\"\"\n",
+    "    1. Maximum gap is always greater than or equal to ceil((max - min) / N)\n",
+    "        - Divide N nums into N - 1 groups\n",
+    "        - If evenly distributed, each elements would be in a different bucket (1 element in each bucket)\n",
+    "        - If unevenly distributed, two or more buckets would have multiple elements. Some buckets may not have any elements - max gap could occur betweeen left and right of the missing buckets\n",
+    "    2. Consequently we only need to store the min and max of each bucket\n",
+    "    \"\"\"\n",
+    "    N, high, low = len(nums), max(nums), min(nums)\n",
+    "    bucket_size = math.ceil((high - low) / N)\n",
+    "    buckets: dict[int, tuple[int, int]] = {}\n",
+    "\n",
+    "    # Edge case\n",
+    "    if bucket_size == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    # Group the numbers into buckets\n",
+    "    for n in nums:\n",
+    "        index = n // bucket_size\n",
+    "        min_, max_ = buckets.get(index, ((index + 1) * bucket_size, (index - 1) * bucket_size))\n",
+    "        min_, max_ = min(min_, n), max(max_, n)\n",
+    "        buckets[index] = (min_, max_)\n",
+    "\n",
+    "    # Iterate through each and find the max gap\n",
+    "    curr, end = low // bucket_size, high // bucket_size\n",
+    "    max_gap = 0\n",
+    "    while curr < end:\n",
+    "        next_ = curr + 1\n",
+    "        while next_ not in buckets:\n",
+    "            next_ += 1\n",
+    "        curr, max_gap = next_, max(max_gap, buckets[next_][0] - buckets[curr][1])\n",
+    "\n",
+    "    return max_gap\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumGap([3,14,15,83,6,4,19,20,40]) == 43\n",
+    "assert maximumGap([3,6,9,1]) == 3\n",
+    "assert maximumGap([10]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2de5b7ba",
+   "metadata": {},
+   "source": [
+    "LC Virtual - 5: Weekly Contest 6\n",
+    "https://leetcode.com/contest/leetcode-weekly-contest-6/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02ae7259",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1: Sum of left leaves\n",
+    "def sumOfLeftLeaves(root: BinaryTreeNode) -> int:\n",
+    "    def backtrack(curr: BinaryTreeNode) -> tuple[int, int]:\n",
+    "        if not curr:\n",
+    "            return 0, -1\n",
+    "        else:\n",
+    "            left_sum, left_type = backtrack(curr.left)\n",
+    "            right_sum, right_type = backtrack(curr.right)\n",
+    "            curr_type, total = 0 if left_type == -1 and right_type == -1 else 1, 0\n",
+    "            if curr_type == 0:\n",
+    "                total += curr.val\n",
+    "            if left_type != -1:\n",
+    "                total += left_sum\n",
+    "            if right_type >= 1:\n",
+    "                total += right_sum\n",
+    "            result = total, curr_type\n",
+    "            return result\n",
+    "\n",
+    "    return backtrack(root)[0] if root.left or root.right else 0\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sumOfLeftLeaves(BinaryTreeNode.from_array([3,9,20,None,None,15,7])) == 24\n",
+    "assert sumOfLeftLeaves(BinaryTreeNode.from_array([1])) == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaa96394",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2: Convert to hexadecimal\n",
+    "def toHex(num: int) -> str:\n",
+    "    # If negative, find hex for its 2's compliment\n",
+    "    if num < 0:\n",
+    "        bit_length = 32\n",
+    "        num &= (2 << bit_length - 1) - 1\n",
+    "\n",
+    "    # Use division method\n",
+    "    division_result: list[int] = []\n",
+    "    while num >= 16:\n",
+    "        num, rem = num // 16, num % 16\n",
+    "        division_result.append(rem)\n",
+    "    division_result.append(num)\n",
+    "    division_result.reverse()\n",
+    "\n",
+    "    # Convert to hexadecimal string\n",
+    "    mapping = {i: str(i) for i in range(0, 10)} | {i: chr(ord('a') + i - 10) for i in range(10, 16)}\n",
+    "    return ''.join(map(lambda x: mapping[x], division_result))\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert toHex(26) == \"1a\"\n",
+    "assert toHex(-1) == \"ffffffff\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69bb828f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3: Queue Reconstruction by Height\n",
+    "def reconstructQueue(people: list[list[int]]) -> list[list[int]]:\n",
+    "    N = len(people)\n",
+    "\n",
+    "    # Sort to find the relative height ordering\n",
+    "    people.sort()\n",
+    "\n",
+    "    # Iterate from shortest to tallest, keeping track of number of person with height equal to curr\n",
+    "    eq_front = []\n",
+    "    prev, eq_count = -1, 0\n",
+    "    for i in range(N):\n",
+    "        if people[i][0] == prev:\n",
+    "            eq_count += 1\n",
+    "        else:\n",
+    "            eq_count = 0\n",
+    "        prev = people[i][0]\n",
+    "        eq_front.append(eq_count)\n",
+    "\n",
+    "    # Insert into queue in correct order\n",
+    "    result: list[list[int]] = []\n",
+    "    while eq_front:\n",
+    "        actual, (height, expected) = eq_front.pop(), people.pop()\n",
+    "        if expected == actual:\n",
+    "            result.append([height, expected])\n",
+    "        else:\n",
+    "            temp: list[list[int]] = []\n",
+    "            for i in range(expected - actual):\n",
+    "                temp.append(result.pop())\n",
+    "            result.append([height, expected])\n",
+    "            while temp:\n",
+    "                result.append(temp.pop())\n",
+    "\n",
+    "    result.reverse()\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert reconstructQueue([[7,0],[4,4],[7,1],[5,0],[6,1],[5,2]]) == [[5,0],[7,0],[5,2],[6,1],[4,4],[7,1]]\n",
+    "assert reconstructQueue([[6,0],[5,0],[4,0],[3,2],[2,2],[1,4]]) == [[4,0],[5,0],[2,2],[3,2],[1,4],[6,0]]"
    ]
   }
  ],
