--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -938,6 +938,7 @@
      "iopub.status.idle": "2024-06-14T18:03:59.146842Z",
      "shell.execute_reply": "2024-06-14T18:03:59.146330Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.011282,
      "end_time": "2024-06-14T18:03:59.147852",
@@ -987,6 +988,66 @@
     "# Testing the solution\n",
     "assert reconstructQueue([[7,0],[4,4],[7,1],[5,0],[6,1],[5,2]]) == [[5,0],[7,0],[5,2],[6,1],[4,4],[7,1]]\n",
     "assert reconstructQueue([[6,0],[5,0],[4,0],[3,2],[2,2],[1,4]]) == [[4,0],[5,0],[2,2],[3,2],[1,4],[6,0]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b1cd8d3",
+   "metadata": {},
+   "source": [
+    "Trapping Rain water - II (Upsolving)\n",
+    "https://leetcode.com/problems/trapping-rain-water-ii/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16a2bb8e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d0cafe4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q4: Trapping Rain water - II\n",
+    "# https://leetcode.com/problems/trapping-rain-water-ii/solutions/1138028/python3-visualization-bfs-solution-with-explanation\n",
+    "def trapRainWater(heightMap: list[list[int]]) -> int:\n",
+    "    N, M = len(heightMap), len(heightMap[0])\n",
+    "    visited: set[tuple[int, int]] = set()\n",
+    "\n",
+    "    # Add boundary cells to heap, heap: Height, i, j\n",
+    "    heap: list[tuple[int, int, int]] = []\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if i in (0, N - 1) or j in (0, M - 1):\n",
+    "                heapq.heappush(heap, (heightMap[i][j], i, j))\n",
+    "                visited.add((i, j))\n",
+    "\n",
+    "    level = volume = 0\n",
+    "    while heap:\n",
+    "        height, x, y = heapq.heappop(heap)\n",
+    "        level = max(level, height)\n",
+    "        for i, j in [(x - 1, y), (x + 1, y), (x, y - 1), (x, y + 1)]:\n",
+    "            if 0 <= i < N and 0 <= j < M and (i, j) not in visited:\n",
+    "                next_height = heightMap[i][j]\n",
+    "                if next_height < level:\n",
+    "                    volume += level - next_height\n",
+    "                visited.add((i, j))\n",
+    "                heapq.heappush(heap, (next_height, i, j))\n",
+    "\n",
+    "    return volume\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert trapRainWater([[1,4,3,1,3,2],[3,2,1,3,2,4],[2,3,3,2,3,1]]) == 4\n",
+    "assert trapRainWater([[3,3,3,3,3],[3,2,2,2,3],[3,2,1,2,3],[3,2,2,2,3],[3,3,3,3,3]]) == 10\n",
+    "assert trapRainWater([[12,13,1,12],[13,4,13,12],[13,8,10,12],[12,13,12,12],[13,13,13,13]]) == 14\n",
+    "assert trapRainWater([[5,5,5,1],[5,1,1,5],[5,1,5,5],[5,2,5,8]]) == 3\n",
+    "assert trapRainWater([[14,17,18,16,14,16],[17,3,10,2,3,8],[11,10,4,7,1,7],[13,7,2,9,8,10],[13,1,3,4,8,6],[20,3,3,9,10,8]]) == 25"
    ]
   }
  ],
