--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -1036,6 +1036,7 @@
      "iopub.status.idle": "2024-06-15T17:29:39.997553Z",
      "shell.execute_reply": "2024-06-15T17:29:39.997069Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014258,
      "end_time": "2024-06-15T17:29:39.998659",
@@ -1081,6 +1082,88 @@
     "assert trapRainWater([[12,13,1,12],[13,4,13,12],[13,8,10,12],[12,13,12,12],[13,13,13,13]]) == 14\n",
     "assert trapRainWater([[5,5,5,1],[5,1,1,5],[5,1,5,5],[5,2,5,8]]) == 3\n",
     "assert trapRainWater([[14,17,18,16,14,16],[17,3,10,2,3,8],[11,10,4,7,1,7],[13,7,2,9,8,10],[13,1,3,4,8,6],[20,3,3,9,10,8]]) == 25"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "666f4a63",
+   "metadata": {},
+   "source": [
+    "https://leetcode.com/contest/leetcode-weekly-contest-8/problems/pacific-atlantic-water-flow/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1cd9722",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def pacificAtlantic(heights: list[list[int]]) -> set[tuple[int, int]]:\n",
+    "    def DFS(to_visit: list[tuple[int, int]]) -> set[tuple[int, int]]:\n",
+    "        visited: set[tuple[int, int]] = set()\n",
+    "        while to_visit:\n",
+    "            x, y = to_visit.pop()\n",
+    "            visited.add((x, y))\n",
+    "            for i, j in [(x, y + 1), (x, y - 1), (x + 1, y), (x - 1, y)]:\n",
+    "                if 0 <= i < N and 0 <= j < M and (i, j) not in visited and heights[i][j] >= heights[x][y]:\n",
+    "                    to_visit.append((i, j))\n",
+    "\n",
+    "        return visited\n",
+    "\n",
+    "    N, M = len(heights), len(heights[0])\n",
+    "\n",
+    "    pacific: set[tuple[int, int]] = DFS([(0, i) for i in range(M)] + [(i, 0) for i in range(N)])\n",
+    "    atlantic: set[tuple[int, int]] = DFS([(N - 1, i) for i in range(M)] + [(i, M - 1) for i in range(N)])\n",
+    "\n",
+    "    return set.intersection(pacific, atlantic)\n",
+    "\n",
+    "# Testing the soluiton\n",
+    "pacificAtlantic([[1,2,2,3,5],[3,2,3,4,4],[2,4,5,3,1],[6,7,1,4,5],[5,1,1,2,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "308c8c47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/contest/leetcode-weekly-contest-8/problems/sentence-screen-fitting/\n",
+    "def sentenceScreenFitting(sentence: list[str], rows: int, cols: int) -> int:\n",
+    "    n_words = len(sentence)\n",
+    "    word_length: list[int] = list(map(len, sentence))\n",
+    "    word_idx = n_sentences = 0\n",
+    "\n",
+    "    row_pending = rows\n",
+    "    while row_pending > 0:\n",
+    "        col_pending = cols\n",
+    "        while col_pending > 0:\n",
+    "\n",
+    "            if word_length[word_idx] <= col_pending:\n",
+    "                col_pending -= word_length[word_idx]\n",
+    "                word_idx += 1\n",
+    "\n",
+    "                if col_pending > 0:\n",
+    "                    col_pending -= 1\n",
+    "\n",
+    "            else:\n",
+    "                col_pending = 0\n",
+    "\n",
+    "            if word_idx == n_words:\n",
+    "                word_idx = 0\n",
+    "                n_sentences += 1\n",
+    "\n",
+    "        row_pending -= 1\n",
+    "\n",
+    "    return n_sentences\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sentenceScreenFitting([\"hello\",\"world\"], 2, 8) == 1\n",
+    "assert sentenceScreenFitting([\"a\", \"bcd\", \"e\"], 3, 6) == 2\n",
+    "assert sentenceScreenFitting([\"i\",\"had\",\"apple\",\"pie\"], 4, 5) == 1"
    ]
   }
  ],
