DSA Practice: DSU

--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -1128,7 +1128,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "308c8c47",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
     "# https://leetcode.com/contest/leetcode-weekly-contest-8/problems/sentence-screen-fitting/\n",
@@ -1164,6 +1166,200 @@
     "assert sentenceScreenFitting([\"hello\",\"world\"], 2, 8) == 1\n",
     "assert sentenceScreenFitting([\"a\", \"bcd\", \"e\"], 3, 6) == 2\n",
     "assert sentenceScreenFitting([\"i\",\"had\",\"apple\",\"pie\"], 4, 5) == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01322001",
+   "metadata": {},
+   "source": [
+    "Codeforces: https://codeforces.com/problemset/problem/1843/C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5edd897",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def sumBinaryTree(n: int) -> int:\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    elif n % 2 == 0:\n",
+    "        return n + sumBinaryTree(n // 2)\n",
+    "    else:\n",
+    "        return n + sumBinaryTree((n - 1) // 2)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert sumBinaryTree(37) == 71\n",
+    "assert sumBinaryTree(10000000000000000) == 19999999999999980\n",
+    "assert sumBinaryTree(15) == 26"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79065385",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def insertionInBST(curr: BinaryTreeNode, val: int):\n",
+    "    if not curr:\n",
+    "        curr = BinaryTreeNode(val)\n",
+    "    elif curr.val < val:\n",
+    "        curr.right = insertionInBST(curr.right, val)\n",
+    "    else:\n",
+    "        curr.left = insertionInBST(curr.left, val)\n",
+    "    return curr\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert insertionInBST(BinaryTreeNode.from_array([10, 2, 12, 1, 3, None, 13]), 11).to_list() == [10, 2, 12, 1, 3, 11, 13]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae24503f",
+   "metadata": {},
+   "source": [
+    "King Escape: https://codeforces.com/problemset/problem/1033/A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06da5999",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def kingEscape(N: int, queen: tuple[int, int], king: tuple[int, int], target: tuple[int, int]) -> bool:\n",
+    "    minX, maxX = min(king[0], target[0]), max(king[0], target[0])\n",
+    "    minY, maxY = min(king[1], target[1]), max(king[1], target[1])\n",
+    "    return not (minX < queen[0] < maxX or minY < queen[1] < maxY)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert kingEscape(8, (4, 4), (1, 3), (3, 1)) == True\n",
+    "assert kingEscape(8, (4, 4), (2, 3), (1, 6)) == False\n",
+    "assert kingEscape(8, (3, 5), (1, 2), (6, 1)) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6a84986",
+   "metadata": {},
+   "source": [
+    "LC Medium: https://leetcode.com/problems/most-profit-assigning-work/submissions/1292541583"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa4fd57d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maxProfitAssignment(difficulty: list[int], profit: list[int], worker: list[int]) -> int:\n",
+    "    # Sort workers by their capacity\n",
+    "    worker.sort()\n",
+    "\n",
+    "    # Sort jobs available based on their difficuly\n",
+    "    jobs: list[tuple[int, int]] = sorted(zip(difficulty, profit))\n",
+    "\n",
+    "    # Use a two pointer approach - iterate through jobs adding to our maxHeap until diff cross what curr worker can handle\n",
+    "    heap: list[int] = []\n",
+    "    maxProfit = i = 0\n",
+    "    for max_difficulty in worker:\n",
+    "        while i < len(jobs) and jobs[i][0] <= max_difficulty:\n",
+    "            heapq.heappush(heap, -jobs[i][1])\n",
+    "            i += 1\n",
+    "        maxProfit += -heap[0] if heap else 0\n",
+    "\n",
+    "    return maxProfit\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maxProfitAssignment([2,4,6,8,10], [10,20,30,40,50], [4,5,6,7]) == 100\n",
+    "assert maxProfitAssignment([85,47,57], [24,66,99], [40,25,25]) == 0\n",
+    "assert maxProfitAssignment([13,37,58], [4,90,96], [34,73,45]) == 190\n",
+    "assert maxProfitAssignment([68,35,52,47,86], [67,17,1,81,3], [92,10,85,84,82]) == 324"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9954a873",
+   "metadata": {},
+   "source": [
+    "https://codeforces.com/problemset/problem/1829/E"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72ec16c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DisjointSetLakes:\n",
+    "    def __init__(self, N: int, M: int, grid: list[list[int]]):\n",
+    "        self.N, self.M = N, M\n",
+    "        self.grid = grid\n",
+    "        self.parent: dict[tuple[int, int], tuple[int, int]] = dict()\n",
+    "        self.size: dict[tuple[int, int], int] = dict()\n",
+    "        self.max_volume = 0\n",
+    "        self.iterate_grid()\n",
+    "\n",
+    "    def is_valid(self, i: int, j: int) -> bool:\n",
+    "        return 0 <= i < self.N and 0 <= j < self.M\n",
+    "\n",
+    "    def iterate_grid(self) -> None:\n",
+    "        for i in range(self.N):\n",
+    "            for j in range(self.M):\n",
+    "                if self.grid[i][j] > 0:\n",
+    "                    top, left = (i - 1, j), (i, j - 1)\n",
+    "                    if self.is_valid(*top) and self.grid[top[0]][top[1]] > 0:\n",
+    "                        self.unionBySize((i, j), top)\n",
+    "                    if self.is_valid(*left) and self.grid[left[0]][left[1]] > 0:\n",
+    "                        self.unionBySize((i, j), left)\n",
+    "                    self.max_volume = max(self.max_volume, self.size[self.findUltimateParent((i, j))])\n",
+    "\n",
+    "    def unionBySize(self, c1: tuple[int, int], c2: tuple[int, int]) -> None:\n",
+    "        up1, up2 = self.findUltimateParent(c1), self.findUltimateParent(c2)\n",
+    "        s1, s2 = self.size[up1], self.size[up2]\n",
+    "        if up1 == up2:\n",
+    "            return\n",
+    "        elif s1 > s2:\n",
+    "            self.parent[up2] = up1\n",
+    "            self.size[up1] += self.size[up2]\n",
+    "        else:\n",
+    "            self.parent[up1] = up2\n",
+    "            self.size[up2] += self.size[up1]\n",
+    "\n",
+    "        # Update the max volume\n",
+    "        self.max_volume = max(self.max_volume, self.size[up1], self.size[up2])\n",
+    "\n",
+    "    def findUltimateParent(self, cell: tuple[int, int]) -> tuple[int, int]:\n",
+    "        if cell not in self.parent:\n",
+    "            self.parent[cell] = cell\n",
+    "            self.size[cell] = self.grid[cell[0]][cell[1]]\n",
+    "\n",
+    "        if cell == self.parent[cell]:\n",
+    "            return cell\n",
+    "        else:\n",
+    "            self.parent[cell] = self.findUltimateParent(self.parent[cell])\n",
+    "            return self.parent[cell]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert DisjointSetLakes(3, 3, [[1,2,0],[3,4,0],[0,0,5]]).max_volume == 10\n",
+    "assert DisjointSetLakes(1, 1, [[9]]).max_volume == 9\n",
+    "assert DisjointSetLakes(3, 3, [[0,1,1],[1,0,1],[1,1,1]]).max_volume == 7\n",
+    "assert DisjointSetLakes(5, 5, [[1,1,1,1,1],[1,0,0,0,1],[1,0,5,0,1],[1,0,0,0,1],[1,1,1,1,1]]).max_volume == 16"
    ]
   }
  ],
