LC VC - 19th June 2024

--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -1450,6 +1450,7 @@
      "iopub.status.idle": "2024-06-18T17:45:16.599533Z",
      "shell.execute_reply": "2024-06-18T17:45:16.599071Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016437,
      "end_time": "2024-06-18T17:45:16.600609",
@@ -1515,6 +1516,189 @@
     "assert DisjointSetLakes(1, 1, [[9]]).max_volume == 9\n",
     "assert DisjointSetLakes(3, 3, [[0,1,1],[1,0,1],[1,1,1]]).max_volume == 7\n",
     "assert DisjointSetLakes(5, 5, [[1,1,1,1,1],[1,0,0,0,1],[1,0,5,0,1],[1,0,0,0,1],[1,1,1,1,1]]).max_volume == 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29c7843d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def maximumVolumeLake(N: int, M: int, grid: list[list[int]]) -> int:\n",
+    "    def is_valid(i: int, j: int) -> bool:\n",
+    "        return 0 <= i < N and 0 <= j < M\n",
+    "\n",
+    "    def DFS(i: int, j: int) -> int:\n",
+    "        stack: list[tuple[int, int]] = [(i, j)]\n",
+    "        volume: int = 0\n",
+    "        while stack:\n",
+    "            x, y = stack.pop()\n",
+    "            volume += grid[x][y]\n",
+    "            grid[x][y] = 0\n",
+    "            for i, j in [(x, y - 1), (x, y + 1), (x - 1, y), (x + 1, y)]:\n",
+    "                if is_valid(i, j) and grid[i][j] > 0:\n",
+    "                    stack.append((i, j))\n",
+    "\n",
+    "        return volume\n",
+    "\n",
+    "    max_volume = 0\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if grid[i][j] > 0:\n",
+    "                max_volume = max(max_volume, DFS(i, j))\n",
+    "\n",
+    "    return max_volume\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert maximumVolumeLake(3, 3, [[1,2,0],[3,4,0],[0,0,5]])\n",
+    "assert maximumVolumeLake(1, 1, [[9]]) == 9\n",
+    "assert maximumVolumeLake(3, 3, [[0,1,1],[1,0,1],[1,1,1]]) == 7\n",
+    "assert maximumVolumeLake(5, 5, [[1,1,1,1,1],[1,0,0,0,1],[1,0,5,0,1],[1,0,0,0,1],[1,1,1,1,1]]) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "91c3306f",
+   "metadata": {},
+   "source": [
+    "LC Virtual: https://leetcode.com/contest/leetcode-weekly-contest-10/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ce8fd77",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q1: Island Perimeter\n",
+    "def islandPerimeter(grid: list[list[int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    Iterate through grid, count the number of sides covered with water\n",
+    "    \"\"\"\n",
+    "    N, M = len(grid), len(grid[0])\n",
+    "    perimeter = 0\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if grid[i][j] == 1:\n",
+    "                for x, y in ((i, j - 1), (i, j + 1), (i - 1, j), (i + 1, j)):\n",
+    "                    if x < 0 or y < 0 or x >= N or y >= M or grid[x][y] == 0:\n",
+    "                        perimeter += 1\n",
+    "\n",
+    "    return perimeter\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert islandPerimeter([[0,1,0,0],[1,1,1,0],[0,1,0,0],[1,1,0,0]]) == 16\n",
+    "assert islandPerimeter([[1]]) == 4\n",
+    "assert islandPerimeter([[1,0]]) == 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b2c6c69",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Q2: Can I Win?\n",
+    "def canIWinBrute(maxChoosableInteger: int, desiredTotal: int) -> bool:\n",
+    "    @functools.cache\n",
+    "    def backtrack(picked: tuple[bool, ...], total: int) -> bool:\n",
+    "        for pick in range(1, maxChoosableInteger + 1):\n",
+    "            if not picked[pick]:\n",
+    "                if pick >= total:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    new_picked = list(picked)\n",
+    "                    new_picked[pick] = True\n",
+    "                    otherWin = backtrack(tuple(new_picked), total - pick)\n",
+    "                    if not otherWin:\n",
+    "                        return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    if (maxChoosableInteger * (maxChoosableInteger + 1)) // 2 < desiredTotal:\n",
+    "        return False\n",
+    "    else:\n",
+    "        result = backtrack(tuple(False for i in range(maxChoosableInteger + 1)), desiredTotal)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canIWinBrute(10, 11) == False\n",
+    "assert canIWinBrute(10, 0) == True\n",
+    "assert canIWinBrute(10, 40) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c2e00b1",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def canIWin(maxChoosableInteger: int, desiredTotal: int) -> bool:\n",
+    "    @functools.cache\n",
+    "    def backtrack(picked: int, total: int) -> bool:\n",
+    "        for pick in range(1, maxChoosableInteger + 1):\n",
+    "            mask = 1 << pick\n",
+    "            if not (picked & mask):\n",
+    "                if pick >= total:\n",
+    "                    return True\n",
+    "                else:\n",
+    "                    otherWin = backtrack(picked | mask, total - pick)\n",
+    "                    if not otherWin:\n",
+    "                        return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    if (maxChoosableInteger * (maxChoosableInteger + 1)) // 2 < desiredTotal:\n",
+    "        return False\n",
+    "    else:\n",
+    "        result = backtrack(0, desiredTotal)\n",
+    "        return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canIWin(10, 11) == False\n",
+    "assert canIWin(10, 0) == True\n",
+    "assert canIWin(10, 40) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8865870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Q3: Min Moves 2\n",
+    "def minMoves2(nums: list[int]) -> int:\n",
+    "    # Find the middle element, convert all elements to this\n",
+    "    nums.sort()\n",
+    "\n",
+    "    # Figure out the element in the middle\n",
+    "    N = len(nums)\n",
+    "    mid = nums[N // 2]\n",
+    "\n",
+    "    # Count total moves\n",
+    "    moves = 0\n",
+    "    for n in nums:\n",
+    "        moves += abs(mid - n)\n",
+    "\n",
+    "    return moves\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert minMoves2([1,2,3]) == 2\n",
+    "assert minMoves2([1,10,2,9]) == 16\n",
+    "assert minMoves2([1]) == 0"
    ]
   }
  ],
