--- a/practice/004.ipynb
+++ b/practice/004.ipynb
@@ -2114,6 +2114,7 @@
      "iopub.status.idle": "2024-06-19T17:05:54.676881Z",
      "shell.execute_reply": "2024-06-19T17:05:54.676422Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.012538,
      "end_time": "2024-06-19T17:05:54.677956",
@@ -2144,6 +2145,128 @@
     "\n",
     "# Testing the solution\n",
     "assert sorted(topKFrequentBrute([1,1,1,2,2,3,3,3,4,4,5], 2)) == [1, 3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e81ca6f",
+   "metadata": {},
+   "source": [
+    "LC Virtual: https://leetcode.com/contest/leetcode-weekly-contest-11/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9e0166a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# Number of segments in a string\n",
+    "def countSegments(s: str) -> int:\n",
+    "    segments, space = 0, True\n",
+    "    for ch in s:\n",
+    "        if ch.isspace():\n",
+    "            segments += not space\n",
+    "            space = True\n",
+    "        else:\n",
+    "            space = False\n",
+    "\n",
+    "    return segments + (not space)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert countSegments(\"Python is a pretty cool language\") == 6\n",
+    "assert countSegments(\" Python is pretty    cool    \") == 4\n",
+    "assert countSegments(\"Hello\") == 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "416596d8",
+   "metadata": {},
+   "source": [
+    "Q3: Unique substrings in a wrap around string\n",
+    "https://youtu.be/2nCTyDrRm4I?si=TP9X0ZwTJNhKHkl4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7bc8b9c",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def findSubstringInWraproundString(s: str) -> int:\n",
+    "    \"\"\"\n",
+    "    Initial thought process: Check the longest substring that can end at an index.\n",
+    "    This however doesn't account for duplicates.\n",
+    "\n",
+    "    To handle duplicates we store the max length of substrings ending for english alphabet\n",
+    "    For eg: zabxabc\n",
+    "    z - 1\n",
+    "    a - 1\n",
+    "    b - 3\n",
+    "    x - 1\n",
+    "    a - 1\n",
+    "    b - 3\n",
+    "    c - 3\n",
+    "\n",
+    "    Once completed, count += (arr[i] * arr[i + 1]) / 2\n",
+    "    \"\"\"\n",
+    "    longest: dict[str, int] = dict()\n",
+    "    count = 0\n",
+    "    for i in range(len(s)):\n",
+    "        if i == 0 or ord(s[i]) - ord(s[i - 1]) == 1 or (s[i] == 'a' and s[i - 1] == 'z'):\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            count = 1\n",
+    "        longest[s[i]] = max(longest.get(s[i], 0), count)\n",
+    "\n",
+    "    # Count substrings\n",
+    "    return sum(longest.values())\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findSubstringInWraproundString(\"zabxabc\") == 10\n",
+    "assert findSubstringInWraproundString(\"cac\") == 2\n",
+    "assert findSubstringInWraproundString(\"zab\") == 6"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5699b3a7",
+   "metadata": {},
+   "source": [
+    "Compress the string\n",
+    "https://www.naukri.com/code360/problems/compress-the-string_893402"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f182bfaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compressTheString(s: str):\n",
+    "    stack: list[tuple[str, int]] = []\n",
+    "    for ch in s:\n",
+    "        if not stack or stack[-1][0] != ch:\n",
+    "            stack.append((ch, 1))\n",
+    "        else:\n",
+    "            stack[-1] = (ch, stack[-1][1] + 1)\n",
+    "\n",
+    "    result: list[str] = []\n",
+    "    for ch, freq in stack:\n",
+    "        result.append(f'{ch}{freq}' if freq > 1 else ch)\n",
+    "    return ''.join(result)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert compressTheString(\"aaabbddccc\") == \"a3b2d2c3\"\n",
+    "assert compressTheString(\"ggttttffffrreee\") == \"g2t4f4r2e3\""
    ]
   }
  ],
